# evm-from-scratch

rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/execution/: code.rs  environment.rs  evm.rs  memory.rs  mod.rs  stack.rs
rust/src/types/: account.rs  address.rs  bytes.rs  calldata.rs  environment.rs  int256.rs  log.rs  message.rs  mod.rs  state.rs  transaction.rs
rust/src/utils/: int256.rs  mod.rs
