[package]
name = "evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4", features = ["serde"] }
ruint = { version = "1.7", features = ["serde", "rlp"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_path_to_error = "0.1.8"
serde_with = { version = "2.1", features = ["json"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
sha3 = "0.10"
rlp = "0.5"
